# Nin64-Emulator

./: .gitignore  README.md
.github/workflows/: android-debug.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_port.c  jni_bridge.c
app/src/main/cpp/libretro_bridge/: audio_player.cpp  audio_player.h  jni_bridge_libretro.c
app/src/main/java/com/izzy2lost/nin64/: CheatDatabase.kt  CheatManagerActivity.kt  CoverMatcher.kt  EdgeToEdge.kt  GameActivity.kt  GameControlSettingsActivity.kt  GamepadMappingActivity.kt  MainActivity.kt  NativeBridge.kt  Nin64Application.kt  RomDatabase.kt  RomIdentityReader.kt  SaveStateFiles.kt  SettingsActivity.kt  TouchControlsView.kt  TouchLayoutActivity.kt
app/src/main/res/drawable/: bg_card_blue.xml  bg_card_green.xml  bg_card_red.xml  bg_card_yellow.xml  ic_info.xml  ic_settings.xml  ic_view_list.xml  logo.xml
app/src/main/res/layout/: activity_game_control_settings.xml  activity_main.xml  activity_settings.xml  item_rom_grid.xml  list_item_rom.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/test/java/com/izzy2lost/nin64/: ControlsConfigTest.kt
docs/: native-core-backends.md
scripts/: build_mupen64plus_next_android.sh  update_mupencheat_from_libretro.py
